# storage/api-docs/api-docs.json
@@ -40,6 +40,54 @@
                 }
             }
         },
+        "/api/v1/articles/{article_id}/comments/add-first": {
+            "post": {
+                "tags": [
+                    "comments"
+                ],
+                "summary": "add firstLevel comment to the article",
+                "operationId": "addFirstComment",
+                "parameters": [
+                    {
+                        "name": "article_id",
+                        "in": "path",
+                        "description": "Articles id to comment",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "user_id",
+                        "in": "query",
+                        "description": "Users id to comment",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "body",
+                        "in": "query",
+                        "description": "Text comment",
+                        "schema": {
+                            "type": "text"
+                        }
+                    }
+                ],
+                "responses": {
+                    "404": {
+                        "description": "comments not found"
+                    },
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {}
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/articles/{article}/comments/reSortByDate": {
             "get": {
                 "tags": [
